feat: remove YAML DB & use UUID for claim ID